# computor-v2

./: .gitignore  AExpressionParser.hs  ArithmeticExpression.hs  ArithmeticExpressionSolver.hs  BuiltinCommands.hs  Builtins.hs  ComputorCommand.hs  ComputorState.hs  ComputorStateOperations.hs  FunctionOperations.hs  GenericParsers.hs  LICENSE  Main.hs  Makefile  MatrixOperations.hs  PredefinedFunctions.hs  README.md  TNum.hs  TNumParser.hs  Types.hs  ValueFunctionCall.hs  VariableAssignment.hs  VariableParser.hs  author  computor-v2.cabal  main.hs
DeprecatedTypes/: ArithmeticExpression.hs  ComputorState.hs  Function.hs  Value.hs  ValueFunction.hs  VariableAssignment.hs
Operations/: ArithmeticExpression.hs  ComputorState.hs  Equation.hs  Function.hs  Matrix.hs
Parsers/: AExpressionParser.hs  BuiltinParser.hs  ComputorCommandParser.hs  EquationParser.hs  FunctionParser.hs  GenericParsers.hs  TNumParser.hs  VariableAssignmentParser.hs  VariableParser.hs
Types/: ArithmeticExpression.hs  ComputorState.hs  TNum.hs
